fix contrast

--- a/style.css
+++ b/style.css
@@ -512,6 +512,7 @@ button {
 
 .icon-md {
     font-size: 30px!important;
+    color: #FFFFE6FF;
 }
 
 .icon-lg {
@@ -769,6 +770,9 @@ h4 {
     margin-bottom: 14px;
     margin-top: 24px;
 }
+.footer-paragraph{
+    color: #333!important;
+}
 
 .white {
     color: #FFFFFF!important;
@@ -824,12 +828,12 @@ h4 {
 
 .btn-atomic-tangerine {
     background: #F3976C;
-    color: #FFFFFF!important;
+    color: #333!important;
 }
 
 .btn-atomic-tangerine:hover {
     background: #c27956!important;
-    color: #FFFFFF!important;
+    color: #333!important;
 }
 
 .ltc-white {
